--- a/package.json
+++ b/package.json
@@ -14,12 +14,17 @@
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.5",
         "postcss": "^8.4.14",
+        "sass": "^1.64.2",
         "tailwindcss": "^3.1.0",
         "vite": "^4.0.0",
         "vue": "^3.2.31"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.4.0",
+        "@fortawesome/free-solid-svg-icons": "^6.4.0",
+        "@fortawesome/vue-fontawesome": "^3.0.3",
         "mitt": "^3.0.1",
+        "primeflex": "^3.3.1",
         "primeicons": "^6.0.1",
         "primevue": "^3.30.1",
         "vue-sweetalert2": "^5.0.5"
