--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@fortawesome/vue-fontawesome": "^3.0.3",
         "mitt": "^3.0.1",
         "moment": "^2.29.4",
+        "moment-timezone": "^0.5.43",
         "primeflex": "^3.3.1",
         "primeicons": "^6.0.1",
         "primevue": "^3.30.1",
