--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@fortawesome/fontawesome-svg-core": "^6.4.0",
         "@fortawesome/free-solid-svg-icons": "^6.4.0",
         "@fortawesome/vue-fontawesome": "^3.0.3",
+        "chart.js": "^4.4.0",
         "mitt": "^3.0.1",
         "moment": "^2.29.4",
         "moment-timezone": "^0.5.43",
